--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <section>
-    <div> 
+    <div class="imagem-principal"> 
         <img src="alejadinho.jpg"
     </div>
 </section>   
 <section>
-    <div>
+    <div class="caixa-pricipal">
         <hi>Você pode pergutar para iAE👨‍🦽</hi>
         <div></div>
         <div></div>
