--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 </section>   
 <section>
     <div class="caixa-pricipal">
-        <hi>Você pode pergutar para iAE👨‍🦽</hi>
-        <div></div>
-        <div></div>
-        <div></div>
+        </hi> Você pode pergutar para iAE👨‍🦽</hi>
+        <div class="caixa-perguntas"></div>
+        <div class="caixa-alternativas"></div>
+        <div class="caixa-resultado"></div>
+        <p class="=texto-resultado"></p>
     </div>
 </section> 
+<script src="script.js"></script>
 </body>
 </html>
