--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <section>
     <div class="imagem-principal"> 
-        <img src="alejadinho.jpg"
+        <img id="alej" src="alejadinho.jpg">
     </div>
 </section>   
 <section>
